Connected front and backend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 	<h1> Shoutout </h1>
 	<h2> Say Anything You want </h2>
 
-	<form action="action_page.php">
+	<form action="AddShoutout">
 		<input type="text" name="text" value="Hello World!" onFocus="if (value == 'Hello World!') {value=''}" onBlur="if (value== '') {value='Hello World!'}" size="15">
 		<br>
 		<input type="submit" value="">
